# transform_manipulation

./: .gitignore  CMakeLists.txt  README.md  transform_manipulation.pc.in
include/transform_manipulation/: pose.h  transform.h
src/examples/: convert_to_matrix_node.cpp  get_rpy_node.cpp  transform_frames_node.cpp
src/transform_manipulation/: pose.cpp  transform.cpp
